# simposiorevsalud-frontend

./: .gitignore  Cargo.toml  Netlify.toml  README.md  Trunk.toml  index.html  netlify-build.sh
other/: app.rs
src/: main.rs  routes.rs  types.rs  utils.rs
src/components/: admin-register.rs  admin-users.rs  admin_panel.rs  admin_register.rs  admin_update.rs  admin_users.rs  certificates.rs  home.rs  login.rs  mod.rs  navbar.rs  not_found.rs  profile.rs  protected_route.rs  register.rs
src/services/: api.rs  auth.rs  storage.rs
static/styles/: animations.css  components.css  main.css  pages.css
