[package]
name = "simposiorevsalud-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "1.0.0"
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = "0.18.0"
