[package]
name = "simposiorevsalud-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "1.0.0"
gloo-net = { version = "0.2", features = ["http"] }
gloo-storage = "0.2"
gloo-utils = "0.1"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlSelectElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
